--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@ wide range of personalities, honest and hard working </p>
         Phone: 0705979072
       </li>
       <li>
-        <strong>Shekinnah Glory Odari</strong><br />
+        <strong>Silas odhiambo</strong><br />
         Head of Radio, ECN<br />
-        Phone: 0713829535
+        Phone: 0742843086
       </li>
       <li>
         <strong>Ankali Ray</strong><br />
