--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <br> 
 
     </p>
-    <a href="ASSETS/UPDATED RAFFTON OGOTI NYAREGA CV,RESUME.docx" target="_blank" style="margin-top: 5%;">DOWNLOAD RESUME</a>
+    <a href="UPDATED 1 RAFFTON OGOTI NYAREGA CV,RESUME.docx" target="_blank" style="margin-top: 5%;">DOWNLOAD RESUME</a>
 </div>
 
   <div class="homeimgCard">
